--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,7 @@
-argcomplete==1.12.3
 asgiref==3.4.1
-attrs==21.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.9.3
-blivet==3.4.2
-blivet-gui==2.3.0
-Brlapi==0.8.2
-cached-property==1.5.2
-certifi==2020.12.5
-cffi==1.14.6
-chardet==4.0.0
-charset-normalizer==2.0.4
-chrome-gnome-shell==0.0.0
-click==8.0.1
-cryptography==3.4.7
-cupshelpers==1.0
-dasbus==1.6
-dbus-python==1.2.18
-decorator==5.0.9
-distro==1.6.0
 Django==3.2.9
-docker==5.0.2
-docker-compose==1.29.2
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-fedora-third-party==0.8
-fros==1.1
-gpg==1.15.1
-gssapi==1.6.14
-humanize==0.5.1
-idna==3.2
-jsonschema==3.2.0
-koji==1.26.1
-langtable==0.0.56
-libcomps==0.1.18
-lxml==4.6.3
-nftables==0.1
-olefile==0.46
-packaging==21.0
-paramiko==2.7.2
-pexpect==4.8.0
-pid==2.2.3
-Pillow==8.3.2
-ply==3.11
-productmd==1.33
-progressbar2==3.53.2
-ptyprocess==0.6.0
-pwquality==1.4.4
-pyasn1==0.4.8
-pycairo==1.20.1
-pycparser==2.20
-pycups==2.0.1
-pycurl==7.44.1
-pyenchant==3.2.2
-pygit2==1.6.1
-PyGObject==3.42.0
-pykickstart==3.34
-PyNaCl==1.4.0
-pyparsing==2.4.7
-pyparted==3.11.7
-pyrsistent==0.18.0
-PySocks==1.7.1
-python-augeas==1.1.0
-python-dateutil==2.8.1
-python-dotenv==0.18.0
-python-meh==0.50
-python-utils==2.5.6
+django-froala-editor==4.0.7
+djangorestframework==3.12.4
+Pillow==8.4.0
 pytz==2021.3
-pyudev==0.22.0
-pyxdg==0.27
-PyYAML==5.4.1
-regex==2021.10.23
-requests==2.26.0
-requests-file==1.5.1
-requests-ftp==0.3.1
-requests-gssapi==1.2.3
-rpm==4.17.0
-rpmautospec==0.2.5
-selinux==3.3
-sepolicy==3.3
-setools==4.4.0
-simpleaudio==1.0.4
-simpleline==1.8.2
-six==1.16.0
-sos==4.2
-soupsieve==2.3.1
 sqlparse==0.4.2
-systemd-python==234
-texttable==1.6.2
-urllib3==1.26.6
-websocket-client==1.1.0
